altered hover effects on navlinks and socialslogo in Navbar. added media query for ExhibitModal to update size of img on smaller screen and prevent it running off the sides. all tested a-ok in browser Inspect

--- a/src/components/Gallery.css
+++ b/src/components/Gallery.css
@@ -87,3 +87,10 @@ i {
     margin-top: 1rem;
     z-index: 1;
 }
+
+/**************************************Media Queries */
+@media (max-width: 768px) {
+    .modal-img {
+        height: 50vh;
+    }
+}
