--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -40,7 +40,8 @@
 }
 
 .navlink:hover {
-    scale: 1.1;
+    /* scale: 1.1; */
+    text-shadow: 1.5px 1.5px 1px yellow, 0 0 25px orange, 0 0 5px orangered;
 }
 
 .navlink:active {
@@ -53,6 +54,10 @@
     height: auto;
     margin-top: .6rem;
     margin-left: .5rem;
+}
+
+.socialslogo:hover {
+    scale: 1.1;
 }
 
 a {
